consolidated documentation, fixed antlr.gradle to work on unix systems, updated grammar to support any order of unary operators